--- a/app/src/main/res/layout/activity_pay_mobile_wallet.xml
+++ b/app/src/main/res/layout/activity_pay_mobile_wallet.xml
@@ -111,98 +111,143 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent">
                         <!-- Parcel ID -->
-                        <EditText
-                            android:id="@+id/product_name_edittext"
+                        <TextView
+                            android:id="@+id/textView_ProductName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/gray"
-                            android:hint="Product Name"
+                            android:layout_marginLeft="10dp"
+                            android:text="Product Name"
+                            android:textColorHint="@color/gray" />
+                        <EditText
+                            android:id="@+id/product_name_edittext"
+                            android:layout_below="@+id/textView_ProductName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:hint=""
                             android:enabled="false"
                             android:inputType="text"
-                            android:maxLength="10"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
                         <!-- Tracking ID -->
                         <!-- Order Total -->
+                        <TextView
+                            android:id="@+id/textView_TrackingId"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:layout_marginLeft="10dp"
+                            android:text="Tracking ID"
+                            android:layout_below="@id/product_name_edittext"
+                            android:layout_marginTop="10dp"
+
+                            android:textColorHint="@color/gray" />
                         <EditText
                             android:id="@+id/tracking_id_edittext"
                             android:enabled="false"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/product_name_edittext"
+                            android:layout_below="@id/textView_TrackingId"
                             android:layout_alignParentEnd="true"
-                            android:layout_marginTop="20dp"
                             android:layout_marginEnd="0dp"
                             android:backgroundTint="@color/gray"
-                            android:hint="Tracking ID"
+
                             android:inputType="text"
-                            android:maxLength="20"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
+                        <TextView
+                            android:id="@+id/tvmobile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:layout_marginLeft="10dp"
+                            android:text="Mobile Wallet Type"
+                            android:layout_below="@id/tracking_id_edittext"
+                            android:layout_marginTop="10dp"
 
+                            android:textColorHint="@color/gray" />
                         <EditText
                             android:id="@+id/walletType_et"
                             android:enabled="false"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/tracking_id_edittext"
-                            android:layout_marginTop="20dp"
+                            android:layout_below="@id/tvmobile"
                             android:backgroundTint="@color/gray"
-                            android:hint="Mobile Wallet Type"
                             android:inputType="text"
-                            android:maxLength="10"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
+                        <TextView
+                            android:id="@+id/tvOrderTotal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:layout_marginLeft="10dp"
+                            android:text="Order Total"
+                            android:layout_below="@id/walletType_et"
+                            android:layout_marginTop="10dp"
 
+                            android:textColorHint="@color/gray" />
                         <EditText
                             android:id="@+id/order_total_edittext"
                             android:enabled="false"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/walletType_et"
-                            android:layout_marginTop="20dp"
+                            android:layout_below="@id/tvOrderTotal"
                             android:backgroundTint="@color/gray"
-                            android:hint="Order Total"
                             android:inputType="numberDecimal"
-                            android:maxLength="10"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
+                        <TextView
+                            android:id="@+id/tvCourier"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:layout_marginLeft="10dp"
+                            android:text="Courier Name"
+                            android:layout_below="@id/order_total_edittext"
+                            android:layout_marginTop="10dp"
 
+                            android:textColorHint="@color/gray" />
                         <EditText
                             android:id="@+id/courierName_et"
                             android:enabled="false"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/order_total_edittext"
-                            android:layout_marginTop="20dp"
+                            android:layout_below="@id/tvCourier"
                             android:backgroundTint="@color/gray"
-                            android:hint="Courier Name"
                             android:inputType="text"
-                            android:maxLength="10"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
+                        <TextView
+                            android:id="@+id/tvCourierNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/gray"
+                            android:layout_marginLeft="10dp"
+                            android:text="Courier Account Number"
+                            android:layout_below="@id/courierName_et"
+                            android:layout_marginTop="10dp"
 
+                            android:textColorHint="@color/gray" />
                         <EditText
                             android:id="@+id/courierAccNum_et"
                             android:enabled="false"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/courierName_et"
-                            android:layout_marginTop="20dp"
+                            android:layout_below="@id/tvCourierNum"
                             android:backgroundTint="@color/gray"
-                            android:hint="Courier Account Number"
                             android:inputType="text"
-                            android:maxLength="10"
                             android:maxLines="1"
                             android:padding="8dp"
                             android:textColorHint="@color/gray" />
@@ -225,7 +270,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="0dp"
                             android:layout_marginBottom="0dp"
-                            app:srcCompat="@mipmap/ic_launcher" />
+                            app:srcCompat="@drawable/ic_baseline_hide_image_100" />
 
                     </RelativeLayout>
 
