--- a/app/src/main/res/layout/fragment_add_parcel.xml
+++ b/app/src/main/res/layout/fragment_add_parcel.xml
@@ -97,7 +97,7 @@
                     android:maxLength="50"
                     android:maxLines="1"
                     android:padding="8dp"
-                    android:textColor="#FF38ADD6"
+                    android:textColor="@color/black"
                     />
                 <!-- Tracking ID -->
                 <!-- Order Total -->
@@ -119,7 +119,7 @@
                     android:maxLength="50"
                     android:maxLines="1"
 
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     />
 
                 <EditText
@@ -136,7 +136,7 @@
 
                     android:maxLength="10"
                     android:maxLines="1"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     />
 
                 <TextView
@@ -218,7 +218,8 @@ android:layout_marginBottom="5dp"
                     android:inputType="text"
                     android:maxLength="50"
                     android:maxLines="1"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/black"
+                    />
 
                 <RadioGroup
                     android:id="@+id/payment_comp_radiogroup"
