--- a/app/src/main/res/layout/recyclerview_parcel_list.xml
+++ b/app/src/main/res/layout/recyclerview_parcel_list.xml
@@ -144,6 +144,7 @@
                     android:text="Delivery Status"
                     android:layout_below="@id/textView_ProductName"
                     android:textColor="@color/darkmidblue"
+                    android:maxLines="1"
 
                     android:textSize="14sp" />
 
@@ -167,7 +168,7 @@ android:visibility="gone"
                     android:layout_below="@id/textView_DateReceived"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
-
+                    android:maxLines="1"
                     android:text="Payment Type"
                     android:textColor="@color/darkmidblue"
                     android:textSize="14sp" />
@@ -190,6 +191,7 @@ android:visibility="gone"
                     android:layout_toRightOf="@id/tvPhp"
                     android:layout_marginLeft="1dp"
                     android:layout_marginTop="8dp"
+                    android:maxLines="1"
 
                     android:text="Compartment"
                     android:textColor="@color/darkmidblue"
